ipc/ipdl/test/ipdl/error/trans_WrongDirection4.ipdl
intr protocol trans_WrongDirection4 {

child:
    intr Msg();
    async __delete__();

state S1:
    answer Msg goto S1;

start state _:
    send __delete__;
};
